hyrax_tests/errors/bes_forbidden_error.dods
url = http://localhost:8080/opendap/data/nc/fnoc1.nc.dods?error(4)
-s
